# eink-reader-server

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
config/: __init__.py
models/: __init__.py
modules/api/routes/: books.py  library.py
modules/image/: processor.py
modules/kavita/: __init__.py  client.py
modules/services/: database.py  html_engine.py  renderer.py  workflow.py
utils/: logger.py
